
- PDO OCI:
  . Fixed bug #77120 (Support 'success with info' at connection).
    (Sergei Morozov)
    
- phpdbg:
  . Fixed bug #81135 (unknown help topic causes assertion failure). (krakjoe)

- SPL:
  . Fixed bug #81112 (Special json_encode behavior for SplFixedArray). (Nikita)
  . Fixed bug #80945 ("Notice: Undefined index" on unset() ArrayObject
    non-existing key). (Nikita)

10 Jun 2021, PHP 8.1.0alpha1

- Core:
  . Fixed inclusion order for phpize builds on Windows. (cmb)
  . Added missing hashtable insertion APIs for arr/obj/ref. (Sara)
  . Fixed bug #75474 (function scope static variables are not bound to a unique
    function). (Nikita)
  . Fixed bug #53826 (__callStatic fired in base class through a parent call if
    the method is private). (Nikita)
  . Implemented FR #77372 (Relative file path is removed from uploaded file).
    (Björn Tantau)
  . Fixed bug #81076 (incorrect debug info on Closures with implicit binds).
    (krakjoe)
 
 - Standard:
  . Fixed bug #77627 (method_exists on Closure::__invoke inconsistency).
    (krakjoe)

- Date:
  . Fixed bug #52480 (Incorrect difference using DateInterval) (Derick)
  . Fixed bug #62326 (date_diff() function returns false result) (Derick)
  . Fixed bug #64992 (dst not handled past 2038) (Derick)
  . Fixed bug #65003 (Wrong date diff) (Derick)
  . Fixed bug #66545 (DateTime. diff returns negative values) (Derick)
  . Fixed bug #68503 (date_diff on two dates with timezone set localised
    returns wrong results) (Derick)
  . Fixed bug #69806 (Incorrect date from timestamp) (Derick)
  . Fixed bug #71700 (Extra day on diff between begin and end of march 2016)
    (Derick)
  . Fixed bug #71826 (DateTime::diff confuse on timezone 'Asia/Tokyo') (Derick)
  . Fixed bug #73460 (Datetime add not realising it already applied DST
    change) (Derick)
  . Fixed bug #74173 (DateTimeImmutable::getTimestamp() triggers DST switch in
    incorrect time) (Derick)